--- a/index.html
+++ b/index.html
@@ -1,64 +1,241 @@
-<!-- Projects Section -->
-<section id="projects">
-    <div class="container">
-        <h2>Projects</h2>
-        <div class="projects-content">
-            <!-- Project 1 -->
-            <div class="project-item">
-                <div class="project-img">
-                    <img src="images/project1.jpg" alt="5G Wireless Network Simulation" loading="lazy">
-                    <div class="overlay">
-                        <a href="project1.html" class="project-link">View Details</a>
-                    </div>
-                </div>
-                <h3><a href="project1.html">5G Wireless Network Simulation</a></h3>
-                <p>
-                    Developed a simulation tool to model and analyze 5G wireless networks, focusing on throughput,
-                    latency, and packet loss.
-                </p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Angela Minardi - Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Prism.js CSS for Syntax Highlighting -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
+    <!-- jsPDF Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- Chart.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- D3.js Library -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Prism.js JS for Syntax Highlighting -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
+    <!-- Meta Tags for SEO -->
+    <meta name="description"
+        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, and AI-Powered Chatbots.">
+    <meta name="keywords" content="Angela Minardi, Portfolio, 5G, Blockchain, AI Chatbot, Computer Science">
+    <!-- Viewport for Responsive Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="container">
+            <a href="#hero" class="logo">Angela Minardi</a>
+            <div class="nav-toggle" aria-label="Toggle navigation menu">
+                <i class="fas fa-bars"></i>
             </div>
-            <!-- Project 2 -->
-            <div class="project-item">
-                <div class="project-img">
-                    <img src="images/project2.jpg" alt="Blockchain Implementation" loading="lazy">
-                    <div class="overlay">
-                        <a href="project2.html" class="project-link">View Details</a>
-                    </div>
-                </div>
-                <h3><a href="project2.html">Blockchain Implementation</a></h3>
-                <p>
-                    Built a simplified blockchain from scratch to understand distributed ledger technology,
-                    including proof of work and hashing.
-                </p>
-            </div>
-            <!-- Project 3 -->
-            <div class="project-item">
-                <div class="project-img">
-                    <img src="images/project3.jpg" alt="AI-Powered Chatbot" loading="lazy">
-                    <div class="overlay">
-                        <a href="project3.html" class="project-link">View Details</a>
-                    </div>
-                </div>
-                <h3><a href="project3.html">AI-Powered Chatbot</a></h3>
-                <p>
-                    Created an AI chatbot that uses machine learning and NLP to interact conversationally, serving
-                    as a personal assistant.
-                </p>
-            </div>
-            <!-- Project 4: Smart-Insole Technical Design -->
-            <div class="project-item">
-                <div class="project-img">
-                    <img src="images/project4.jpg" alt="Smart-Insole Technical Design" loading="lazy">
-                    <div class="overlay">
-                        <a href="project4.html" class="project-link">View Details</a>
-                    </div>
-                </div>
-                <h3><a href="project4.html">Smart-Insole Technical Design</a></h3>
-                <p>
-                    Developed an innovative smart insole to monitor gait patterns and predict fall risks in real-time,
-                    integrating advanced sensors and machine learning algorithms.
-                </p>
+            <ul class="nav-links">
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Hi, I'm Angela Minardi</h1>
+                <p>Passionate Computer Scientist | Networking Enthusiast | Innovator</p>
+                <a href="#projects" class="btn">Explore My Work</a>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <div class="about-content">
+                <img src="images/profile.jpg" alt="Professional photo of Angela Minardi" class="profile-img"
+                    loading="lazy">
+                <div class="about-text">
+                    <p>
+                        I'm Angela Minardi, a dedicated computer scientist with a strong background in networking,
+                        blockchain technology, and artificial intelligence. I thrive on solving complex problems and
+                        developing innovative solutions that make a tangible impact.
+                    </p>
+                    <p>
+                        With hands-on experience in designing and simulating 5G wireless networks, implementing secure
+                        blockchain systems, and creating intelligent AI-powered chatbots, I bring a diverse skill set to
+                        the table. My goal is to leverage technology to drive progress and efficiency in various
+                        industries.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <div class="container">
+            <h2>Education</h2>
+            <div class="education-content">
+                <div class="education-item">
+                    <h3>Bachelor of Science in Computer Science</h3>
+                    <span class="date">2024</span>
+                    <p>Western Governors University</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="skills-content">
+                <div class="skill-category">
+                    <h3>Programming Languages</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>C++</li>
+                        <li>JavaScript</li>
+                        <li>Java</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Technologies & Tools</h3>
+                    <ul>
+                        <li>NS-3 Simulator</li>
+                        <li>TensorFlow & Keras</li>
+                        <li>Blockchain (Ethereum)</li>
+                        <li>Flask & Django</li>
+                        <li>Git & GitHub</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Soft Skills</h3>
+                    <ul>
+                        <li>Problem-Solving</li>
+                        <li>Team Collaboration</li>
+                        <li>Communication</li>
+                        <li>Project Management</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="projects-content">
+                <!-- Project 1 -->
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="images/project1.jpg" alt="5G Wireless Network Simulation" loading="lazy">
+                        <div class="overlay">
+                            <a href="project1.html" class="project-link">View Details</a>
+                        </div>
+                    </div>
+                    <h3><a href="project1.html">5G Wireless Network Simulation</a></h3>
+                    <p>
+                        Developed a simulation tool to model and analyze 5G wireless networks, focusing on throughput,
+                        latency, and packet loss.
+                    </p>
+                </div>
+                <!-- Project 2 -->
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="images/project2.jpg" alt="Blockchain Implementation" loading="lazy">
+                        <div class="overlay">
+                            <a href="project2.html" class="project-link">View Details</a>
+                        </div>
+                    </div>
+                    <h3><a href="project2.html">Blockchain Implementation</a></h3>
+                    <p>
+                        Built a simplified blockchain from scratch to understand distributed ledger technology,
+                        including proof of work and hashing.
+                    </p>
+                </div>
+                <!-- Project 3 -->
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="images/project3.jpg" alt="AI-Powered Chatbot" loading="lazy">
+                        <div class="overlay">
+                            <a href="project3.html" class="project-link">View Details</a>
+                        </div>
+                    </div>
+                    <h3><a href="project3.html">AI-Powered Chatbot</a></h3>
+                    <p>
+                        Created an AI chatbot that uses machine learning and NLP to interact conversationally, serving
+                        as a personal assistant.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <p>Email: <a href="mailto:angela.minardi@example.com">angela.minardi@example.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile"
+                            target="_blank">linkedin.com/in/yourprofile</a></p>
+                    <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
+                </div>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn Profile">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/yourgithub" target="_blank" aria-label="GitHub Profile">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://twitter.com/yourtwitter" target="_blank" aria-label="Twitter Profile">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
+                <!-- Optional: Contact Form -->
+                <form action="https://formspree.io/f/yourformid" method="POST">
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="email" name="_replyto" placeholder="Your Email" required>
+                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Back to Top Button -->
+    <a href="#hero" class="back-to-top" aria-label="Back to Top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
+            <ul class="footer-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
+</body>
+
+</html>
