--- a/index.html
+++ b/index.html
@@ -180,6 +180,20 @@
                         as a personal assistant.
                     </p>
                 </div>
+                <!-- Project 4 -->
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="images/project4.jpg" alt="Smart-Insole Technical Design" loading="lazy">
+                        <div class="overlay">
+                            <a href="project4.html" class="project-link">View Details</a>
+                        </div>
+                    </div>
+                    <h3><a href="project4.html">Smart-Insole Technical Design</a></h3>
+                    <p>
+                        Developed an intelligent smart insole to monitor and analyze gait patterns and foot pressure distribution in
+                        real-time, predicting and preventing potential falls among geriatric populations.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
