--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>5G Wireless Network Simulation - Angela Minardi</title>
+    <title>Analyzing Reading Proficiency Trends - [Your Name]</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
@@ -11,29 +11,69 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Prism.js CSS for Syntax Highlighting -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
-    <!-- jsPDF Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- Chart.js Library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- D3.js Library -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Prism.js JS for Syntax Highlighting -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Detailed overview of Angela Minardi's 5G Wireless Network Simulation project, showcasing key features and technologies used.">
+        content="Detailed analysis of reading proficiency trends using NAEP data, showcasing data cleaning, visualization, and statistical analysis.">
     <meta name="keywords"
-        content="Angela Minardi, 5G Wireless Network Simulation, NS-3, C++, Network Performance, Throughput, Latency, Packet Loss">
+        content="[Your Name], Data Analysis, Reading Proficiency, NAEP, Data Visualization, Python, Pandas, Chart.js">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* Additional CSS for this page */
+        #charts {
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            margin-top: 20px;
+        }
+
+        .chart-container {
+            position: relative;
+            width: 100%;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        pre {
+            background: #f5f5f5;
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            #charts {
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <a href="index.html" class="logo">Angela Minardi</a>
+            <a href="index.html" class="logo">[Your Name]</a>
             <div class="nav-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </div>
@@ -51,30 +91,31 @@
     <!-- Project Detail Section -->
     <section id="project-detail">
         <div class="container">
-            <h2>5G Wireless Network Simulation</h2>
+            <h2>Analyzing Reading Proficiency Trends Using NAEP Data</h2>
             <div class="project-detail-content">
-                <img src="images/project1.jpg" alt="5G Wireless Network Simulation" class="detail-img" loading="lazy">
+                <img src="images/naep_analysis.jpg" alt="NAEP Data Analysis" class="detail-img" loading="lazy">
                 <p>
-                    In this project, I developed a simulation tool to model and analyze the performance of 5G wireless
-                    networks using NS-3. The simulator allows users to configure network parameters and visualize how
-                    changes affect network performance, focusing on key metrics such as throughput, latency, and packet
-                    loss.
+                    This project involves analyzing reading proficiency trends among students using datasets from the National
+                    Assessment of Educational Progress (NAEP). The analysis focuses on understanding how reading scores have
+                    evolved over time and across different demographic groups. The insights derived aim to support educational
+                    interventions and policies to improve reading outcomes.
                 </p>
                 <h3>Key Features:</h3>
                 <ul>
-                    <li>Simulated gNB (5G base stations) and UEs (User Equipment)</li>
-                    <li>Implemented mobility models for realistic movement of UEs</li>
-                    <li>Analyzed performance metrics under varying network conditions</li>
-                    <li>Customizable network topologies and traffic patterns</li>
+                    <li>Data Cleaning and Preparation using Python and Pandas</li>
+                    <li>Descriptive and Inferential Statistical Analysis</li>
+                    <li>Interactive Data Visualizations with Chart.js</li>
+                    <li>Insightful Reporting and Recommendations</li>
                 </ul>
                 <h3>Technologies Used:</h3>
                 <ul>
-                    <li>C++ programming language</li>
-                    <li>NS-3 network simulator</li>
-                    <li>Gnuplot for data visualization</li>
+                    <li>Python programming language</li>
+                    <li>Pandas and NumPy for data manipulation</li>
+                    <li>Chart.js for interactive visualizations</li>
+                    <li>Prism.js for syntax highlighting</li>
                     <li>Git for version control</li>
                 </ul>
-                <a href="https://github.com/yourgithub/5g-simulation" class="btn" target="_blank"
+                <a href="https://github.com/yourgithub/naep-reading-analysis" class="btn" target="_blank"
                     aria-label="View Code on GitHub">
                     <i class="fab fa-github"></i> View Code on GitHub
                 </a>
@@ -82,95 +123,96 @@
         </div>
     </section>
 
-    <!-- Simulation Controls and Visualization -->
-    <section id="simulation">
+    <!-- Interactive Charts Section -->
+    <section id="charts">
         <div class="container">
-            <h3>Simulation Controls</h3>
-            <div class="controls">
-                <label for="bandwidth">Bandwidth (MHz): <span id="bandwidth-value">100</span></label>
-                <input type="range" id="bandwidth" name="bandwidth" min="50" max="200" value="100">
-
-                <label for="user-density">User Density (users/km²): <span id="user-density-value">500</span></label>
-                <input type="range" id="user-density" name="user-density" min="100" max="1000" value="500">
-
-                <!-- Add more controls as needed -->
+            <h3>Interactive Data Visualizations</h3>
+            <div class="chart-container">
+                <canvas id="averageScoresChart"></canvas>
             </div>
-
-            <h3>Network Performance Metrics</h3>
-            <canvas id="performanceChart" width="400" height="200"></canvas>
-        </div>
-    </section>
-
-    <!-- Network Topology Diagram -->
-    <section id="topology">
-        <div class="container">
-            <h3>Network Topology</h3>
-            <div id="networkDiagram"></div>
-        </div>
-    </section>
-
-    <!-- Downloadable Reports -->
-    <section id="download-reports">
-        <div class="container">
-            <h3>Download Simulation Reports</h3>
-            <div class="download-buttons">
-                <button id="download-csv" class="btn">Download CSV Data</button>
-                <button id="download-pdf" class="btn">Download PDF Report</button>
+            <div class="chart-container">
+                <canvas id="demographicTrendsChart"></canvas>
             </div>
         </div>
     </section>
 
-    <!-- Code Snippets -->
+    <!-- Code Snippets Section -->
     <section id="code-snippets">
         <div class="container">
             <h3>Key Code Snippets</h3>
-            <pre><code class="language-cpp">
-// Example: Block Class in 5G Simulation
-#include <string>
-#include <vector>
-#include <ctime>
+            <pre><code class="language-python">
+# Data Cleaning and Preparation
+import pandas as pd
 
-class Block {
-public:
-    int index;
-    std::vector<std::string> transactions;
-    time_t timestamp;
-    std::string previousHash;
-    int nonce;
-    std::string hash;
+# Load datasets
+data_2023 = pd.read_excel('2023_appendix_ltt_13.xlsx', sheet_name='RP-Performance-RED-a13', skiprows=3)
+data_2022 = pd.read_excel('2022_appendix_ltt_9.xlsx', sheet_name='RP-Performance-RED-a09', skiprows=3)
 
-    Block(int idx, std::vector<std::string> tx, std::string prevHash) {
-        index = idx;
-        transactions = tx;
-        timestamp = time(nullptr);
-        previousHash = prevHash;
-        nonce = 0;
-        hash = calculateHash();
-    }
+# Rename columns
+data_2023.columns = ["Characteristics", "1971", "1975", "1980", "1984", "1988", "1990", "1992",
+                     "1994", "1996", "1999", "2004_1", "2004_2", "2008", "2012", "2020", "2023"]
 
-    std::string calculateHash() {
-        // Implement hashing logic here
-    }
+data_2022.columns = ["Characteristics", "1971", "1975", "1980", "1984", "1988", "1990", "1992",
+                     "1994", "1996", "1999", "2004_1", "2004_2", "2008", "2012", "2020", "2022"]
 
-    void mineBlock(int difficulty) {
-        // Implement proof of work here
-    }
-};
+# Drop rows with insufficient data
+data_2023.dropna(thresh=5, inplace=True)
+data_2022.dropna(thresh=5, inplace=True)
+
+# Reset index
+data_2023.reset_index(drop=True, inplace=True)
+data_2022.reset_index(drop=True, inplace=True)
+
+# Convert columns to numeric
+numeric_cols = data_2023.columns[1:]
+data_2023[numeric_cols] = data_2023[numeric_cols].apply(pd.to_numeric, errors='coerce')
+
+numeric_cols_2022 = data_2022.columns[1:]
+data_2022[numeric_cols_2022] = data_2022[numeric_cols_2022].apply(pd.to_numeric, errors='coerce')
+            </code></pre>
+            <pre><code class="language-python">
+# Descriptive Statistics
+avg_scores_2023 = data_2023.mean(numeric_only=True)
+avg_scores_2022 = data_2022.mean(numeric_only=True)
+
+# Plotting Average Scores Over Time
+import matplotlib.pyplot as plt
+
+plt.figure(figsize=(14, 7))
+plt.plot(avg_scores_2023.index, avg_scores_2023.values, marker='o', linestyle='-', label='2023 Data (Age 13)')
+plt.plot(avg_scores_2022.index, avg_scores_2022.values, marker='o', linestyle='--', label='2022 Data (Age 9)')
+
+plt.xlabel('Year')
+plt.ylabel('Average Reading Score')
+plt.title('Trends in Average Reading Scores Over Time')
+plt.xticks(rotation=45)
+plt.legend()
+plt.grid(True)
+plt.tight_layout()
+plt.show()
             </code></pre>
             <!-- Add more code snippets as needed -->
         </div>
     </section>
 
-    <!-- Video Demonstration -->
-    <section id="video-demo">
+    <!-- Insights and Recommendations Section -->
+    <section id="insights">
         <div class="container">
-            <h3>Simulation Demonstration</h3>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YourVideoID"
-                    title="5G Wireless Network Simulation Demo" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
+            <h3>Insights and Recommendations</h3>
+            <ul>
+                <li><strong>Trend Analysis:</strong> Average reading scores have shown a steady increase over the years, indicating improvements in reading proficiency.</li>
+                <li><strong>Demographic Disparities:</strong> Significant differences exist among demographic groups, with certain groups (e.g., Black, Hispanic) showing slower progress.</li>
+                <li><strong>Targeted Interventions:</strong> Focused support for underperforming groups can help bridge the achievement gap and promote equity in education.</li>
+                <li><strong>Continuous Monitoring:</strong> Implement real-time data tracking to monitor student progress and adjust strategies promptly.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Contact Information Section -->
+    <section id="contact">
+        <div class="container">
+            <h3>Contact Me</h3>
+            <p>Feel free to reach out to me via [LinkedIn](https://www.linkedin.com/in/yourprofile/) or email at <a href="mailto:your.email@example.com">your.email@example.com</a> for any inquiries or collaborations.</p>
         </div>
     </section>
 
@@ -182,7 +224,7 @@ public:
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
+            <p>&copy; 2024 [Your Name]. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -191,8 +233,126 @@ public:
         </div>
     </footer>
 
-    <!-- JavaScript -->
-    <script src="js/script.js"></script>
+    <!-- JavaScript for Interactive Charts -->
+    <script>
+        // Average Reading Scores Over Time Chart
+        const ctx1 = document.getElementById('averageScoresChart').getContext('2d');
+        const averageScoresChart = new Chart(ctx1, {
+            type: 'line',
+            data: {
+                labels: <?php echo json_encode(avg_scores_combined.index); ?>,
+                datasets: [{
+                    label: '2023 Data (Age 13)',
+                    data: <?php echo json_encode(avg_scores_combined["2023 (Age 13)"].values); ?>,
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    fill: false,
+                    tension: 0.1
+                },
+                {
+                    label: '2022 Data (Age 9)',
+                    data: <?php echo json_encode(avg_scores_combined["2022 (Age 9)"].values); ?>,
+                    borderColor: 'rgba(153, 102, 255, 1)',
+                    backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                    fill: false,
+                    tension: 0.1
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Trends in Average Reading Scores Over Time'
+                    }
+                },
+                interaction: {
+                    mode: 'index',
+                    intersect: false,
+                },
+                scales: {
+                    x: {
+                        title: {
+                            display: true,
+                            text: 'Year'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Average Reading Score'
+                        }
+                    }
+                }
+            }
+        });
+
+        // Demographic Trends Chart
+        const ctx2 = document.getElementById('demographicTrendsChart').getContext('2d');
+        const demographicTrendsChart = new Chart(ctx2, {
+            type: 'bar',
+            data: {
+                labels: ['White', 'Black', 'Hispanic', 'Male'],
+                datasets: [
+                    {
+                        label: '2023 Data (Age 13)',
+                        data: <?php echo json_encode(Object.values(group_avg_scores_2023)); ?>,
+                        backgroundColor: 'rgba(54, 162, 235, 0.6)'
+                    },
+                    {
+                        label: '2022 Data (Age 9)',
+                        data: <?php echo json_encode(Object.values(group_avg_scores_2022)); ?>,
+                        backgroundColor: 'rgba(255, 99, 132, 0.6)'
+                    }
+                ]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Reading Scores by Demographic Group'
+                    },
+                    tooltip: {
+                        mode: 'index',
+                        intersect: false,
+                    }
+                },
+                scales: {
+                    x: {
+                        stacked: true,
+                        title: {
+                            display: true,
+                            text: 'Demographic Group'
+                        }
+                    },
+                    y: {
+                        stacked: true,
+                        title: {
+                            display: true,
+                            text: 'Average Reading Score'
+                        }
+                    }
+                }
+            }
+        });
+    </script>
+
+    <!-- Prism.js Initialization -->
+    <script>
+        Prism.highlightAll();
+    </script>
+
+    <!-- JavaScript for Navigation Toggle -->
+    <script>
+        const navToggle = document.querySelector('.nav-toggle');
+        const navLinks = document.querySelector('.nav-links');
+
+        navToggle.addEventListener('click', () => {
+            navLinks.classList.toggle('nav-active');
+            navToggle.classList.toggle('toggle');
+        });
+    </script>
 </body>
 
 </html>
