--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Analyzing Reading Proficiency Trends - [Your Name]</title>
+    <title>Analyzing Reading Proficiency Trends - Angela Minardi</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
@@ -18,62 +18,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Detailed analysis of reading proficiency trends using NAEP data, showcasing data cleaning, visualization, and statistical analysis.">
+        content="Detailed analysis of reading proficiency trends using NAEP data, showcasing key findings and interactive visualizations.">
     <meta name="keywords"
-        content="[Your Name], Data Analysis, Reading Proficiency, NAEP, Data Visualization, Python, Pandas, Chart.js">
+        content="Angela Minardi, Data Analysis, NAEP, Reading Proficiency, Python, pandas, Chart.js, Data Visualization">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* Additional CSS for this page */
-        #charts {
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-            margin-top: 20px;
-        }
-
-        .chart-container {
-            position: relative;
-            width: 100%;
-            max-width: 800px;
-            margin: auto;
-        }
-
-        pre {
-            background: #f5f5f5;
-            padding: 15px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            #charts {
-                flex-direction: column;
-            }
-        }
-    </style>
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <a href="index.html" class="logo">[Your Name]</a>
+            <a href="index.html" class="logo">Angela Minardi</a>
             <div class="nav-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </div>
@@ -93,26 +49,30 @@
         <div class="container">
             <h2>Analyzing Reading Proficiency Trends Using NAEP Data</h2>
             <div class="project-detail-content">
-                <img src="images/naep_analysis.jpg" alt="NAEP Data Analysis" class="detail-img" loading="lazy">
+                <img src="images/project2.jpg" alt="Reading Proficiency Analysis" class="detail-img" loading="lazy">
                 <p>
-                    This project involves analyzing reading proficiency trends among students using datasets from the National
+                    In this project, I analyzed reading proficiency trends among students using datasets from the National
                     Assessment of Educational Progress (NAEP). The analysis focuses on understanding how reading scores have
-                    evolved over time and across different demographic groups. The insights derived aim to support educational
-                    interventions and policies to improve reading outcomes.
+                    evolved over time and across different demographic groups. This project demonstrates my ability to clean
+                    and prepare data, perform statistical analyses, create insightful visualizations, and derive actionable
+                    insights—skills essential for the Data Analyst role at Ignite Reading.
                 </p>
                 <h3>Key Features:</h3>
                 <ul>
-                    <li>Data Cleaning and Preparation using Python and Pandas</li>
-                    <li>Descriptive and Inferential Statistical Analysis</li>
+                    <li>Data Cleaning and Preparation using pandas</li>
+                    <li>Descriptive Statistics and Trend Analysis</li>
+                    <li>Group Analysis across Demographic Categories</li>
+                    <li>Inferential Statistics with ANOVA Tests</li>
                     <li>Interactive Data Visualizations with Chart.js</li>
-                    <li>Insightful Reporting and Recommendations</li>
+                    <li>Comprehensive Reporting and Recommendations</li>
                 </ul>
                 <h3>Technologies Used:</h3>
                 <ul>
                     <li>Python programming language</li>
-                    <li>Pandas and NumPy for data manipulation</li>
-                    <li>Chart.js for interactive visualizations</li>
-                    <li>Prism.js for syntax highlighting</li>
+                    <li>pandas and numpy for data manipulation</li>
+                    <li>matplotlib and seaborn for initial visualizations</li>
+                    <li>Chart.js for interactive web-based charts</li>
+                    <li>Scipy for statistical analysis</li>
                     <li>Git for version control</li>
                 </ul>
                 <a href="https://github.com/yourgithub/naep-reading-analysis" class="btn" target="_blank"
@@ -123,16 +83,18 @@
         </div>
     </section>
 
-    <!-- Interactive Charts Section -->
-    <section id="charts">
+    <!-- Interactive Visualizations Section -->
+    <section id="visualizations">
         <div class="container">
-            <h3>Interactive Data Visualizations</h3>
-            <div class="chart-container">
-                <canvas id="averageScoresChart"></canvas>
-            </div>
-            <div class="chart-container">
-                <canvas id="demographicTrendsChart"></canvas>
-            </div>
+            <h3>Average Reading Scores Over Time</h3>
+            <canvas id="averageScoresChart"></canvas>
+        </div>
+    </section>
+
+    <section id="demographic-analysis">
+        <div class="container">
+            <h3>Reading Scores by Demographic Group</h3>
+            <canvas id="demographicScoresChart"></canvas>
         </div>
     </section>
 
@@ -141,55 +103,20 @@
         <div class="container">
             <h3>Key Code Snippets</h3>
             <pre><code class="language-python">
-# Data Cleaning and Preparation
-import pandas as pd
+# Example: Performing ANOVA Test
+from scipy.stats import f_oneway
 
-# Load datasets
-data_2023 = pd.read_excel('2023_appendix_ltt_13.xlsx', sheet_name='RP-Performance-RED-a13', skiprows=3)
-data_2022 = pd.read_excel('2022_appendix_ltt_9.xlsx', sheet_name='RP-Performance-RED-a09', skiprows=3)
+# Function to perform ANOVA
+def perform_anova(group_scores):
+    return f_oneway(*group_scores.values())
 
-# Rename columns
-data_2023.columns = ["Characteristics", "1971", "1975", "1980", "1984", "1988", "1990", "1992",
-                     "1994", "1996", "1999", "2004_1", "2004_2", "2008", "2012", "2020", "2023"]
+# Perform ANOVA for 2023 data
+anova_result_2023 = perform_anova(group_avg_scores_2023)
+print("ANOVA Results for 2023 (Age 13):", anova_result_2023)
 
-data_2022.columns = ["Characteristics", "1971", "1975", "1980", "1984", "1988", "1990", "1992",
-                     "1994", "1996", "1999", "2004_1", "2004_2", "2008", "2012", "2020", "2022"]
-
-# Drop rows with insufficient data
-data_2023.dropna(thresh=5, inplace=True)
-data_2022.dropna(thresh=5, inplace=True)
-
-# Reset index
-data_2023.reset_index(drop=True, inplace=True)
-data_2022.reset_index(drop=True, inplace=True)
-
-# Convert columns to numeric
-numeric_cols = data_2023.columns[1:]
-data_2023[numeric_cols] = data_2023[numeric_cols].apply(pd.to_numeric, errors='coerce')
-
-numeric_cols_2022 = data_2022.columns[1:]
-data_2022[numeric_cols_2022] = data_2022[numeric_cols_2022].apply(pd.to_numeric, errors='coerce')
-            </code></pre>
-            <pre><code class="language-python">
-# Descriptive Statistics
-avg_scores_2023 = data_2023.mean(numeric_only=True)
-avg_scores_2022 = data_2022.mean(numeric_only=True)
-
-# Plotting Average Scores Over Time
-import matplotlib.pyplot as plt
-
-plt.figure(figsize=(14, 7))
-plt.plot(avg_scores_2023.index, avg_scores_2023.values, marker='o', linestyle='-', label='2023 Data (Age 13)')
-plt.plot(avg_scores_2022.index, avg_scores_2022.values, marker='o', linestyle='--', label='2022 Data (Age 9)')
-
-plt.xlabel('Year')
-plt.ylabel('Average Reading Score')
-plt.title('Trends in Average Reading Scores Over Time')
-plt.xticks(rotation=45)
-plt.legend()
-plt.grid(True)
-plt.tight_layout()
-plt.show()
+# Perform ANOVA for 2022 data
+anova_result_2022 = perform_anova(group_avg_scores_2022)
+print("ANOVA Results for 2022 (Age 9):", anova_result_2022)
             </code></pre>
             <!-- Add more code snippets as needed -->
         </div>
@@ -200,19 +127,13 @@ plt.show()
         <div class="container">
             <h3>Insights and Recommendations</h3>
             <ul>
-                <li><strong>Trend Analysis:</strong> Average reading scores have shown a steady increase over the years, indicating improvements in reading proficiency.</li>
-                <li><strong>Demographic Disparities:</strong> Significant differences exist among demographic groups, with certain groups (e.g., Black, Hispanic) showing slower progress.</li>
-                <li><strong>Targeted Interventions:</strong> Focused support for underperforming groups can help bridge the achievement gap and promote equity in education.</li>
+                <li><strong>Trend Analysis:</strong> Both datasets show an upward trend in average reading scores over the years, indicating improvement in reading proficiency.</li>
+                <li><strong>Demographic Disparities:</strong> Significant differences in reading scores among demographic groups were observed, highlighting the need for targeted support.</li>
+                <li><strong>Targeted Interventions:</strong> Focus on demographic groups with lower reading scores to provide tailored support and resources.</li>
                 <li><strong>Continuous Monitoring:</strong> Implement real-time data tracking to monitor student progress and adjust strategies promptly.</li>
+                <li><strong>Resource Allocation:</strong> Allocate more resources to groups that demonstrate slower progress to bridge the achievement gap.</li>
+                <li><strong>Further Research:</strong> Conduct qualitative studies to understand underlying factors affecting reading proficiency in different demographic groups.</li>
             </ul>
-        </div>
-    </section>
-
-    <!-- Contact Information Section -->
-    <section id="contact">
-        <div class="container">
-            <h3>Contact Me</h3>
-            <p>Feel free to reach out to me via [LinkedIn](https://www.linkedin.com/in/yourprofile/) or email at <a href="mailto:your.email@example.com">your.email@example.com</a> for any inquiries or collaborations.</p>
         </div>
     </section>
 
@@ -224,7 +145,7 @@ plt.show()
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+            <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -233,30 +154,35 @@ plt.show()
         </div>
     </footer>
 
-    <!-- JavaScript for Interactive Charts -->
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
     <script>
         // Average Reading Scores Over Time Chart
-        const ctx1 = document.getElementById('averageScoresChart').getContext('2d');
-        const averageScoresChart = new Chart(ctx1, {
+        const ctx = document.getElementById('averageScoresChart').getContext('2d');
+        const averageScoresChart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: <?php echo json_encode(avg_scores_combined.index); ?>,
-                datasets: [{
-                    label: '2023 Data (Age 13)',
-                    data: <?php echo json_encode(avg_scores_combined["2023 (Age 13)"].values); ?>,
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    fill: false,
-                    tension: 0.1
-                },
-                {
-                    label: '2022 Data (Age 9)',
-                    data: <?php echo json_encode(avg_scores_combined["2022 (Age 9)"].values); ?>,
-                    borderColor: 'rgba(153, 102, 255, 1)',
-                    backgroundColor: 'rgba(153, 102, 255, 0.2)',
-                    fill: false,
-                    tension: 0.1
-                }]
+                labels: ["1971", "1975", "1980", "1984", "1988", "1990", "1992",
+                         "1994", "1996", "1999", "2004_1", "2004_2", "2008",
+                         "2012", "2020", "2022", "2023"],
+                datasets: [
+                    {
+                        label: '2023 (Age 13)',
+                        data: [/* Insert avg_scores_2023.values */],
+                        borderColor: 'rgba(232, 73, 29, 1)',
+                        backgroundColor: 'rgba(232, 73, 29, 0.2)',
+                        fill: true,
+                        tension: 0.1
+                    },
+                    {
+                        label: '2022 (Age 9)',
+                        data: [/* Insert avg_scores_2022.values */],
+                        borderColor: 'rgba(52, 152, 219, 1)',
+                        backgroundColor: 'rgba(52, 152, 219, 0.2)',
+                        fill: true,
+                        tension: 0.1
+                    }
+                ]
             },
             options: {
                 responsive: true,
@@ -287,22 +213,22 @@ plt.show()
             }
         });
 
-        // Demographic Trends Chart
-        const ctx2 = document.getElementById('demographicTrendsChart').getContext('2d');
-        const demographicTrendsChart = new Chart(ctx2, {
+        // Reading Scores by Demographic Group Chart
+        const ctxDemographic = document.getElementById('demographicScoresChart').getContext('2d');
+        const demographicScoresChart = new Chart(ctxDemographic, {
             type: 'bar',
             data: {
-                labels: ['White', 'Black', 'Hispanic', 'Male'],
+                labels: ["White", "Black", "Hispanic", "Male"],
                 datasets: [
                     {
-                        label: '2023 Data (Age 13)',
-                        data: <?php echo json_encode(Object.values(group_avg_scores_2023)); ?>,
-                        backgroundColor: 'rgba(54, 162, 235, 0.6)'
+                        label: '2023 (Age 13)',
+                        data: [/* Insert group_avg_scores_2023["White"], group_avg_scores_2023["Black"], group_avg_scores_2023["Hispanic"], group_avg_scores_2023["Male"] */],
+                        backgroundColor: 'rgba(232, 73, 29, 0.6)'
                     },
                     {
-                        label: '2022 Data (Age 9)',
-                        data: <?php echo json_encode(Object.values(group_avg_scores_2022)); ?>,
-                        backgroundColor: 'rgba(255, 99, 132, 0.6)'
+                        label: '2022 (Age 9)',
+                        data: [/* Insert group_avg_scores_2022["White"], group_avg_scores_2022["Black"], group_avg_scores_2022["Hispanic"], group_avg_scores_2022["Male"] */],
+                        backgroundColor: 'rgba(52, 152, 219, 0.6)'
                     }
                 ]
             },
@@ -320,14 +246,14 @@ plt.show()
                 },
                 scales: {
                     x: {
-                        stacked: true,
+                        stacked: false,
                         title: {
                             display: true,
                             text: 'Demographic Group'
                         }
                     },
                     y: {
-                        stacked: true,
+                        stacked: false,
                         title: {
                             display: true,
                             text: 'Average Reading Score'
@@ -335,22 +261,6 @@ plt.show()
                     }
                 }
             }
-        });
-    </script>
-
-    <!-- Prism.js Initialization -->
-    <script>
-        Prism.highlightAll();
-    </script>
-
-    <!-- JavaScript for Navigation Toggle -->
-    <script>
-        const navToggle = document.querySelector('.nav-toggle');
-        const navLinks = document.querySelector('.nav-links');
-
-        navToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('nav-active');
-            navToggle.classList.toggle('toggle');
         });
     </script>
 </body>
